<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="362dp"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:gravity="center"
        android:text="@string/set_info"
        android:textColor="#03a9f4"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="#03a9f4" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="54dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:text="@string/about_version"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_big"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="14dp"
            android:text="@string/about_version_text"
            android:textColor="#787878"
            android:textSize="@dimen/text_size_main" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/separate_grey" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="54dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:text="@string/about_info"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_big"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="14dp"
            android:text="@string/about_info_text"
            android:textColor="#787878"
            android:textSize="@dimen/text_size_main" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/separate_grey" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="54dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:text="@string/about_net"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_big"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/about_net"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_marginRight="14dp"
            android:text="@string/about_net_text"
            android:textColor="#50bdee"
            android:textSize="@dimen/text_size_main" />
    </RelativeLayout>
     <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/separate_grey" />
     <TextView android:layout_width="match_parent"
         android:layout_height="41dp"
         android:text="@string/about_copyright"
         android:gravity="bottom|center_horizontal"
         android:textColor="#b4b4b4"
         android:paddingBottom="5dp"
         android:textSize="@dimen/text_size_smallest"/>

</LinearLayout>