<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="362dp"
    android:layout_height="237dp"
    android:orientation="vertical" >
    <TextView android:layout_width="match_parent"
        android:layout_height="61dp"
        android:textSize="18sp"
        android:text="@string/default_color"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#03a9f4"/>
    <View android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#03a9f4"/>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="105dp"
        android:orientation="horizontal">
        <RelativeLayout android:id="@+id/blue"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <ImageView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:src="@drawable/blue"
                />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="14sp"
                android:textColor="#1e1e1e"
                android:text="@string/blue"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="21dp"/>
            <ImageView android:id="@+id/t4_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/fontsize_choice"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="7dp"/>
        </RelativeLayout>
        <View android:layout_width="2px"
            android:layout_height="73dp"
            android:background="#a0a0a0"
            android:layout_gravity="center_vertical"/>
        <RelativeLayout android:id="@+id/green"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <ImageView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:src="@drawable/green"
                />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="14sp"
                android:textColor="#1e1e1e"
                android:text="@string/green"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="21dp"/>
            <ImageView android:id="@+id/t3_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/fontsize_choice"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="7dp"/>
        </RelativeLayout>
        <View android:layout_width="2px"
            android:layout_height="73dp"
            android:background="#a0a0a0"
            android:layout_gravity="center_vertical"/>
        <RelativeLayout android:id="@+id/yellow"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <ImageView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:src="@drawable/yellow"
                />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="14sp"
                android:textColor="#1e1e1e"
                android:text="@string/yellow"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="21dp"/>
            <ImageView android:id="@+id/t2_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/fontsize_choice"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="7dp"/>
        </RelativeLayout>
        <View android:layout_width="2px"
            android:layout_height="73dp"
            android:background="#a0a0a0"
            android:layout_gravity="center_vertical"/>
        <RelativeLayout android:id="@+id/pink"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <ImageView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:src="@drawable/pink"
                />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="14sp"
                android:textColor="#1e1e1e"
                android:text="@string/pink"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="21dp"/>
            <ImageView android:id="@+id/t1_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/fontsize_choice"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="7dp"/>
        </RelativeLayout>
    </LinearLayout>
     <View android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#a0a0a0"/>
    <FrameLayout android:layout_width="match_parent"
        android:layout_height="66dp">
        <Button android:id="@+id/font_cancle"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:text="@string/close"
            android:textColor="#fff"
            android:background="#03a9f4"/>
        <Button
            android:layout_width="326dp"
            android:layout_height="40dp"
            android:visibility="invisible"/>
        
    </FrameLayout>
</LinearLayout>
